--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r pipeline/requirements.txt
-          pip install -r pipeline/requirements-dev.txt
+          pip install -r pipeline/dev.txt
 
       - name: Run tests
         run: |
