--- a/pipeline/metrics/autogluon/params.yaml
+++ b/pipeline/metrics/autogluon/params.yaml
@@ -1,5 +1,11 @@
 train_size: 77156
-test_size: 19290
-features: 59
-data_hash: 0a8a9e72e2eebd344910709dc9f37037
-mode: quick
+val_size: 9645
+test_size: 9645
+features: 60
+data_hash: f2f8871f244f5613bab016ab86d3342f
+autogluon_GBM:
+  extra_trees: false
+  learning_rate: 0.1
+  num_boost_round: 100
+  num_leaves: 16
+  early_stopping_rounds: 10
